# chisel

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: sprite.frag  sprite.vert
docs/: Doxyfile
examples/game/: CMakeLists.txt  main.cpp
examples/hello_window/: CMakeLists.txt  main.cpp
include/chisel/: camera.h  chisel.h  input.h  renderer.h  shader.h  texture.h  window.h
src/: camera.cpp  input.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
